terraform/vpc.tf
data "aws_availability_zones" "available" {}

resource "aws_vpc" "eks_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "${var.cluster_name}_vpc"
  }
}

resource "aws_subnet" "eks_public_subnets" {
  count                   = 2
  vpc_id                  = aws_vpc.main.vpc_id
  cidr_block              = cidrsubnet(aws_vpc.main.cidr_blcok, 8, count.index)
  aws_availability_zone   = data.aws.aws_availability_zones.available.names[count.index]
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.cluster_name}_public_subnet_${count.index}"
  }
}

resource "aws_internet_gateway" "eks_igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.cluster_name}_igw"
  }
}

resource "aws_route_table" "eks_rt" {
  vpc_id = aws_vpc.eks_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name = "${var.cluster_name}_rt"
  }
}

resource "aws_route_table_association" "eks_rta" {
  count          = length(aws_subnet.eks_public_subnets)
  subnet_id      = aws_subnet.public_subnets.*.id[count.index]
  route_table_id = aws_route_table.eks_rt.id
}
